--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     </string>
     <string name="title_activity_maps">Map</string>
     <string name="bottomFragmentText">Add message where you are</string>
+    <string name="yourPosition">Your position</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
