--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -13,4 +13,5 @@
     <string name="prompt_password">Mot de passe (optionnel)</string>
     <string name="title_activity_maps">Carte</string>
     <string name="yourPosition">Votre position actuelle</string>
+    <string name="yourMessage">Votre message :</string>
 </resources>
