--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="title_activity_maps">Map</string>
     <string name="bottomFragmentText">Add message where you are</string>
     <string name="yourPosition">Your position</string>
+    <string name="yourMessage">Your message:</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
